# cookie-template

./: cookiecutter.json
{{ cookiecutter.project_slug }}/: .gitignore  README.md  config.yaml  pyproject.toml  setup.sh
{{ cookiecutter.project_slug }}/docs/: conventional-commits.md
{{ cookiecutter.project_slug }}/manage/: newcontract.sh  newpy.sh  notebook.sh
{{ cookiecutter.project_slug }}/manage/templates/: base.py  contract.yml  notebook.ipynb
{{ cookiecutter.project_slug }}/src/config/: common.py  logging_config.py
{{ cookiecutter.project_slug }}/src/orm/: base_orm.py  retrying_query_orm.py
{{ cookiecutter.project_slug }}/src/utils/: s3.py  ses.py
{{ cookiecutter.project_slug }}/src/utils/queries/: mssql_queries.py  mysql_queries.py
