[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = ["{{ cookiecutter.project_author_name }}"]

[tool.poetry.dev-dependencies]
{% if cookiecutter.dev_dependencies == "Yes" -%}
jupyter = "*"
jupyterlab = "*"
flake8 = "*"
black = "*"
jupyterlab_vim = "*"
{% endif -%}

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"

{% if cookiecutter.data_analysis_engine == "Pandas" -%}
pandas = "*"
{% endif -%}
{% if cookiecutter.data_analysis_engine == "Polars" -%}
polars = "*"
{% endif -%}

{% if cookiecutter.project_packages == "All" -%}
python-dotenv = "*"
pyodbc = "*"
mysql-connector-python = "*"
boto3 = "^1.21"
SQLAlchemy = "*"
{% endif -%}
{% if cookiecutter.project_packages == "Simple" -%}
SQLAlchemy = "*"
python-dotenv = "*"
pyodbc = "*"
mysql-connector-python = "*"
{% endif -%}
{% if cookiecutter.project_packages == "Minimal" -%}
{% endif -%}

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = ["poetry.core.masonry.api"]
